--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "private": true,
   "type": "module",
-  "license":"MIT",
+  "license": "MIT",
   "scripts": {
     "start:dev": "vite --host --mode development",
     "start:prod": "vite --host --mode production",
@@ -19,6 +19,7 @@
   "dependencies": {
     "@ant-design/icons-vue": "^7.0.1",
     "@codemirror/lang-javascript": "^6.2.2",
+    "@codemirror/lang-sql": "^6.8.0",
     "@commitlint/cli": "^19.2.1",
     "@commitlint/config-conventional": "^19.1.0",
     "@types/js-cookie": "^3.0.6",
