--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "@types/js-cookie": "^3.0.6",
     "@types/lodash-es": "^4.17.12",
     "@types/uuid": "^9.0.8",
+    "@uiw/codemirror-theme-github": "^4.23.6",
+    "@uiw/codemirror-theme-vscode": "^4.23.6",
     "@vueuse/core": "^10.9.0",
     "ag-grid-community": "^32.1.0",
     "ag-grid-vue3": "^32.1.0",
@@ -39,6 +41,7 @@
     "normalize.css": "^8.0.1",
     "pinia": "^2.1.7",
     "rollup-plugin-visualizer": "^5.12.0",
+    "sql-formatter": "^15.4.6",
     "unplugin-vue-components": "^0.26.0",
     "uuid": "^9.0.1",
     "vue": "^3.4.21",
