--- a/package.json
+++ b/package.json
@@ -22,13 +22,15 @@
     "@codemirror/lang-sql": "^6.8.0",
     "@commitlint/cli": "^19.2.1",
     "@commitlint/config-conventional": "^19.1.0",
+    "@logicflow/core": "^2.0.7",
+    "@logicflow/extension": "^2.0.11",
     "@types/js-cookie": "^3.0.6",
     "@types/lodash-es": "^4.17.12",
     "@types/uuid": "^9.0.8",
     "@uiw/codemirror-theme-github": "^4.23.6",
     "@uiw/codemirror-theme-vscode": "^4.23.6",
     "@vueuse/core": "^10.9.0",
-    "ag-grid-community": "^32.2.2",
+    "ag-grid-community": "^32.3.3",
     "ag-grid-vue3": "^32.2.2",
     "ant-design-vue": "4.1.2",
     "axios": "^1.6.8",
